- Fixed item title out of bounds

--- a/styles.css
+++ b/styles.css
@@ -63,28 +63,31 @@ body{
 
 #item-container{
     width: 100%;
-    height: 75px;
-    line-height: 75px;
+    min-height: 75px;
+    height: fit-content;
     background-color: #f0f0ed;
     border-radius: 2%;
     font-size: 30px;
     margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 #item-title{
-    position: absolute;
     margin-left: 10px;
+    height: 100%;
+    word-wrap: break-word;
+    overflow: hidden;
 }
 
 .del-button{
-    position: relative;
     background-color: transparent;
     border: none;
     border-top-right-radius: 10%;
     border-bottom-right-radius: 10%;
     width: 75px;
     height: 75px;
-    left: 87%;
 }
 
 #item-container:hover .del-button{
